--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -156,9 +156,34 @@ form label{
 }
 
 
+#member-frm {
+  border: 10px solid black;
+  padding: 35px;
+  margin: 10px 50px 20px 40px;
+}
 
+#member-table{
+  background-color:#ccc;
+  border: 1px solid #333;
+  border-radius: 10px;
+  margin: 165px 0px 0px 0;
+}
 
+/*Theme the header*/
+#member-table .tabulator-header {
+  background-color:#333!important;
+  color:rgb(160, 24, 24);
+}
 
+#example-table-theme .tabulator-tableHolder .tabulator-table .tabulator-row{
+  color:#fff;
+  background-color: #666;
+}
+
+/*Color even rows*/
+  #example-table-theme .tabulator-tableHolder .tabulator-table .tabulator-row:nth-child(even) {
+  background-color: #444;
+}
 
 
 
